Responsive fix, hover btns social media, unaligned split

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -12,6 +12,8 @@ html {
     box-sizing: border-box;     /* <--- Elimina Box Model */
     scroll-snap-type: y proximity;
 
+    
+
 }
 
 *, *::before, *::after {        /* <--- Elimina Box Model */
@@ -48,6 +50,7 @@ a:hover, a:active {
     text-decoration: none; 
 }
 img {
+
     max-width: 100%;
     height: auto;
 }
@@ -66,6 +69,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 0;
+    width: 100vw;
 
     background: linear-gradient(
         to right,
@@ -93,13 +97,15 @@ header {
 .image {
     position: absolute;
 }
+
+
 .bamboo{
     width: 100%;
     height: 100%;
     transform: translateZ(4px) scale(0.5);
     transform-origin: 50%;  
     right: 15%;
-    bottom: 12%;
+    bottom: 16%;
 }
 @media (max-width: 1374px) {
     .bamboo{
@@ -242,6 +248,9 @@ header {
     background-color: var(--Jet_gray);
 }
 @media (max-width: 970px) {
+    .image, .bamboo{
+        display: none;
+    }
     .header_page{
         background: var(--Night);
     }
@@ -279,6 +288,7 @@ header {
     height: 90vh;
     display: flex;
     flex-direction: column 2,1;
+    width: 100vw;
 
     
 }
@@ -499,9 +509,11 @@ header {
     }
 }
 .cards {
+    padding-right: 2rem;
     margin-left: 0;
     padding-left: 0;
     display: flex;
+    gap: 5rem;
     justify-content: space-around;
 }
 .card{
